@@ -513,6 +513,12 @@ Deprecated because only stems using the original Porter Stemmer
 and uses a shared memory location in the SW_HANDLE object to store the stemmed
 word.  See below for other stemming options.
 
+
+=item $fuzzy_word = $swish->Fuzzy( $indexname, $word );
+
+Like StemWord used to work, only it uses whatever stemmer is named in $indexname.
+Returns the same kind of fuzzy_word object as the L<FuzzyWord> method.
+
 =item $mode_string = $result->FuzzyMode;
 
 Returns the string (e.g. "Stemming_en", "Soundex", "None" ) indicating the stemming
